--- a/views/bookmarks/new.erb
+++ b/views/bookmarks/new.erb
@@ -1,3 +1,10 @@
+<% flash.keys.each do |type| %>
+  <div data-alert class="flash <%= type %> alert-box radius">
+    <%= flash[type] %>
+    <a href="#" class="close">&times;</a>
+  </div>
+<% end %>
+
 <form action="/bookmarks" method="post">
   <input type="text" name="url" />
   <input type="submit" value="Submit" />
